# anamnesis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
anamnesis/: __init__.py  constants.py  telemetry.py
anamnesis/analysis/: complexity_analyzer.py  dependency_graph.py
anamnesis/cli/: _context.py  debug_tools.py  interactive_setup.py  main.py
anamnesis/extraction/: __init__.py  cache.py  converters.py  orchestrator.py  protocols.py  types.py
anamnesis/extractors/: __init__.py  import_extractor.py  pattern_extractor.py  symbol_extractor.py
anamnesis/intelligence/: __init__.py  embedding_engine.py  pattern_engine.py  semantic_engine.py
anamnesis/interfaces/: __init__.py  engines.py  search.py
anamnesis/lsp/: __init__.py  backend.py  editor.py  manager.py  symbols.py  utils.py
anamnesis/mcp_server/: __main__.py  _shared.py  server.py
anamnesis/parsing/: ast_types.py  language_parsers.py  tree_sitter_wrapper.py
anamnesis/patterns/: __init__.py  ast_matcher.py  matcher.py  regex_matcher.py
anamnesis/search/: __init__.py  pattern_backend.py  semantic_backend.py  service.py  text_backend.py
anamnesis/services/: __init__.py  codebase_service.py  intelligence_service.py  learning_service.py  memory_service.py  project_registry.py  session_manager.py  symbol_service.py  type_converters.py
anamnesis/storage/: __init__.py  adapters.py  migrations.py  qdrant_store.py  schema.py  sqlite_backend.py  sync_backend.py
anamnesis/types/: __init__.py  analysis.py  core.py  errors.py  mcp_responses.py
anamnesis/utils/: __init__.py  circuit_breaker.py  console_progress.py  error_classifier.py  helpers.py  language_registry.py  logger.py  model_registry.py  response_formatter.py  response_wrapper.py  retry.py  security.py  serialization.py  shutdown_manager.py  toon_encoder.py
anamnesis/watchers/: __init__.py  change_analyzer.py  file_watcher.py
docs/: ARCHITECTURE.md  MIGRATION.md  PHASE14_IMPLEMENTATION_SPEC.md  TOOL_GUIDE.md  TOON_DESIGN.md  TOON_REFERENCE.md
docs/plans/: 2026-02-01-phase5-intelligence-synergies.md
tests/: README.md  conftest.py  test_helper_functions.py  test_input_validation_wiring.py  test_lsp_impl_integration.py  test_lsp_integration.py  test_lsp_pyright.py  test_lsp_utils.py  test_memory_and_metacognition.py  test_model_registry.py  test_phase5_synergies.py  test_phase6_coverage.py  test_project_registry.py  test_qdrant_integration.py  test_qdrant_store.py  test_resilient_backend.py  test_symbol_service.py  test_telemetry.py  test_toon_auto_selection.py  test_type_converters.py
tests/extraction_consolidation/: __init__.py  conftest.py  test_backends.py  test_concept_equivalence.py  test_edge_cases.py  test_learning_integration.py  test_naming_conventions.py  test_orchestrator.py  test_pattern_equivalence.py  test_pipeline_benchmark.py  test_search_integration.py
tests/golden/: compare_output.py
tests/phase10_mcp/: conftest.py  test_lsp_impl.py  test_mcp_protocol.py  test_mcp_server.py  test_memory_impl.py  test_monitoring_sanitization.py  test_sanitize_error_message.py  test_session_tools.py  test_synergy_impl.py
tests/phase11_cli/: test_change_analyzer.py  test_cli.py  test_cli_integration.py  test_file_watcher.py
tests/phase12_embeddings/: test_embedding_engine.py
tests/phase13_toon/: __init__.py  conftest.py  test_hypothesis_properties.py  test_serialization.py  (+3 more)
(+69 files in other folders)
