[project]
name = "anamnesis"
version = "0.1.0"
description = "Semantic code analysis and intelligence - Python port of In-Memoria"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=0.13.0",

    # Storage
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",

    # Vector database (concurrent-safe semantic search)
    "qdrant-client>=1.7.0",

    # Embeddings (Phase 4: Vector Search)
    "sentence-transformers>=2.2.0",

    # MCP
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",

    # CLI
    "click>=8.0.0",

    # Utils
    "loguru>=0.7.0",
    "tenacity>=8.0.0",
    "watchdog>=3.0.0",

    # Async
    "anyio>=4.0.0",

    # TOON format for token-efficient LLM responses
    "toon-format @ git+https://github.com/toon-format/toon-python.git@6b26984a01279defdcf40ab9d09bc418fe8133ac",
]

[project.scripts]
anamnesis = "anamnesis.cli.main:cli"

[project.optional-dependencies]
lsp = [
    "overrides>=7.7.0",    # Used by language server subclasses
    "pathspec>=0.12.1",    # Gitignore pattern matching
    "psutil>=7.0.0",       # Process management for LS lifecycle
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "freezegun>=1.2",
    "deepdiff>=6.0",
    "hypothesis>=6.0",
    "tiktoken>=0.5.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "lsp: marks tests requiring LSP server infrastructure",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
